flink/flink-route-aggregator.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flink-aggregator
spec:
  path: /
  to:
    name: flink-aggregator-rest
    weight: 100
    kind: Service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: rest
